# ChangeLog for dev-util/lincvs
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/lincvs/ChangeLog,v 1.45 2005/12/17 01:07:03 carlo Exp $

*lincvs-1.4.4 (17 Dec 2005)

  17 Dec 2005; Carsten Lohrke <carlo@gentoo.org> +lincvs-1.4.4.ebuild:
  version bump

  13 Nov 2005; Michael Hanselmann <hansmi@gentoo.org> lincvs-1.4.3.ebuild:
  Stable on ppc.

  30 Oct 2005; Carsten Lohrke <carlo@gentoo.org> lincvs-1.4.3.ebuild:
  stable on x86

  05 Sep 2005; Fernando J. Pereda <ferdy@gentoo.org> lincvs-1.4.3.ebuild:
  marked ~alpha wrt bug #99981

*lincvs-1.4.3 (07 Aug 2005)

  07 Aug 2005; Carsten Lohrke <carlo@gentoo.org> +lincvs-1.4.3.ebuild:
  version bump

  11 Jul 2005; Carsten Lohrke <carlo@gentoo.org> lincvs-1.4.2.ebuild:
  fix v.1.4.2 as well and mark stable on x86

  01 Jul 2005; Caleb Tennis <caleb@gentoo.org> lincvs-1.4.0.ebuild,
  lincvs-1.4.1.ebuild:
  Fix qmake dir per bug #97535

*lincvs-1.4.2 (13 Jun 2005)

  13 Jun 2005; Carsten Lohrke <carlo@gentoo.org> +lincvs-1.4.2.ebuild:
  version bump

*lincvs-1.4.1 (22 May 2005)

  22 May 2005; Carsten Lohrke <carlo@gentoo.org> +lincvs-1.4.1.ebuild:
  version bump

  11 May 2005; Joseph Jezak <josejx@gentoo.org> lincvs-1.4.0.ebuild:
  Marked ppc stable.

  01 May 2005; Carsten Lohrke <carlo@gentoo.org>
  -files/lincvs-1.2.0-gentoo.diff, -files/lincvs-1.3.0-rc2-gentoo.diff,
  -lincvs-1.2.0.ebuild, -lincvs-1.3.0_rc2.ebuild, -lincvs-1.4.0_rc2.ebuild,
  lincvs-1.4.0.ebuild:
  stable on x86, clean up

  21 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> lincvs-1.3.2.ebuild:
  Stable on ppc.

*lincvs-1.4.0 (01 Mar 2005)

  01 Mar 2005; Carsten Lohrke <carlo@gentoo.org> +lincvs-1.4.0.ebuild:
  version bump

  18 Jan 2005; Carsten Lohrke <carlo@gentoo.org> lincvs-1.4.0_rc2.ebuild:
  revised tarball

*lincvs-1.4.0_rc2 (11 Jan 2005)

  11 Jan 2005; Carsten Lohrke <carlo@gentoo.org> +lincvs-1.4.0_rc2.ebuild:
  version bump
