@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/lincvs
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/lincvs/ChangeLog,v 1.45 2005/12/17 01:07:03 carlo Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/lincvs/ChangeLog,v 1.46 2006/01/09 13:16:17 caleb Exp $
+
+  09 Jan 2006; Caleb Tennis <caleb@gentoo.org> -lincvs-1.4.0.ebuild,
+  -lincvs-1.4.1.ebuild, -lincvs-1.4.2.ebuild:
+  remove old versions
 
 *lincvs-1.4.4 (17 Dec 2005)
 
